# embedded-tfluna

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/workflows/: main.yml
examples/: README.md
examples/esp32c3/: Cargo.toml  README.md
examples/esp32c3-i2c-sync/: Cargo.toml  README.md
examples/esp32c3-i2c-sync/src/: main.rs
examples/esp32c3/.cargo/: config.toml
examples/esp32c3/asynchronous/: Cargo.toml
examples/esp32c3/asynchronous/src/: main.rs
examples/esp32c3/blocking/: Cargo.toml
examples/esp32c3/src/: main.rs
src/: i2c.rs  lib.rs  traits.rs  types.rs
src/i2c/: constants.rs  device.rs  errors.rs  types.rs
tests/: README.md  integration.rs  integration_i2c_mock.rs  integration_mock.rs
