[package]
name = "embedded-tfluna"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"

[target.'cfg(not(target_arch = "riscv32imc-unknown-none-elf"))'.dev-dependencies]
embedded-hal-mock = "0.11.1"

[target.riscv32imc-unknown-none-elf.dev-dependencies]
log = "0.4.28"
rtt-target = { version = "0.6.1", features = ["log"] }
embedded-test = { version = "0.6.2", features = ["log"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
    "log-04",
    "esp32c3",
    "unstable",
] }
esp-println = { version = "0.15.0", features = ["esp32c3", "log-04"] }

[lib]
test = false

# needed for each integration test
[[test]]
name = "integration"
harness = false


# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
