[package]
name = "embedded-tfluna"
version = "0.2.0"
edition = "2024"
description = "Platform-agnostic Rust driver for the TF-Luna LiDAR distance sensor."
authors = ["Anes Benmerzoug <anes.benmerzoug@gmail.com>"]
repository = "https://github.com/AnesBenmerzoug/embedded-tfluna/tree/main"
homepage = "https://github.com/AnesBenmerzoug/embedded-tfluna/tree/main"
documentation = "https://docs.rs/embedded-tfluna/latest/embedded_tfluna"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "tf-luna",
    "lidar",
    "distance-sensor",
    "embedded-hal",
    "embedded-hal-driver",
]
categories = ["embedded", "hardware-support", "no-std"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
defmt = { version = "1.0.1", optional = true }
bisync = "0.3.0"

[features]
defmt = ["dep:defmt", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03"]
async = ["dep:embedded-hal-async"]

[target.'cfg(not(target_arch = "riscv32"))'.dev-dependencies]
rstest = "0.26.1"
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.47.1", features = ["rt", "macros"] }

[target.riscv32imc-unknown-none-elf.dev-dependencies]
log = "0.4.28"
rtt-target = { version = "0.6.1", features = ["log"] }
embedded-test = { version = "0.6.2", features = ["log"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
    "log-04",
    "esp32c3",
    "unstable",
] }
esp-println = { version = "0.15.0", features = ["esp32c3", "log-04"] }

[lib]
test = false

# needed for each integration test that uses embedded-test
[[test]]
name = "integration"
harness = false

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
