[package]
name = "blocking"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
defmt = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
esp-hal = { workspace = true }
critical-section = { workspace = true }
rtt-target = { workspace = true }
embedded-tfluna = { workspace = true }
